YAML für Timestamp ist erstellt und die basic endpoints implementiert (aber noch leer)
